committing label and button creation

--- a/index.html
+++ b/index.html
@@ -13,17 +13,20 @@
             </label>
 
             <form class="new-inputform">
-                <input type="text" name="channelinputtext" placeholder="Search by channel name" />
+                <input type="text" name="channelinputtext" placeholder="Channel name" />
             </form>
             <form class="new-inputform">
-                <input type="text" name="numberinputtext" placeholder="Search by channel number" />
+                <input type="text" name="numberinputtext" placeholder="Channel number" />
             </form>
             <form class="new-inputform">
-                <input type="text" name="showinputtext" placeholder="Search by show" />
+                <input type="text" name="showinputtext" placeholder="Show name" />
             </form>
             <form class="new-inputform">
-                <input type="text" name="cableinputtext" placeholder="Search by cable provider" />
+                <input type="text" name="cableinputtext" placeholder="Cable provider" />
             </form>
+
+            <button class="regular-button">Search</button>
+            <label id="query-label">hey</label>
         </header>
 
         <ul>
