alert for channel query

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
                 <input type="text" name="numberinputtext" placeholder="Channel number" />
             </form>
             <form class="new-inputform">
-                <input type="text" name="showinputtext" placeholder="Show name" />
+                <input type="text" id="showinputtext" placeholder="Show name" />
             </form>
             <form class="new-inputform">
-                <input type="text" name="cableinputtext" placeholder="Cable provider" />
+                <input type="text" id="cableinputtext" placeholder="Cable provider" />
             </form>
 
             <button class="regular-button">Search</button>
-            <label id="query-label">hey</label>
+            <label id="query-label">label to change</label>
         </header>
 
         <ul>
